--- a/.gitattributes
+++ b/.gitattributes
@@ -53,3 +53,4 @@
 *.unity linguist-generated
 *.aar filter=lfs diff=lfs merge=lfs -text
 Assets/GameDevHQ/FileBase/Projects/Tutorials/Starter_Files/Stealth_Game_Assets/The[[:space:]]Great[[:space:]]Fleece/Game/_Scenes/Learning/Environment_Finished/LightingData.asset filter=lfs diff=lfs merge=lfs -text
+*.LightingData.asset filter=lfs diff=lfs merge=lfs -text
